--- a/static/index.html
+++ b/static/index.html
@@ -7,13 +7,11 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro' rel='stylesheet' type='text/css'>
 </head>
 <body>
   <app-root>
   	<!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
-  <h1>Welcome to The Integrated Space Plan</h1>
-</div>
 
 <div style="text-align: center;">
 <img src="http://localhost:8000/static/loader-1.gif">
