Fixing routes in client

--- a/static/index.html
+++ b/static/index.html
@@ -14,7 +14,7 @@
   	<!--The content below is only a placeholder and can be replaced.-->
 
 <div style="text-align: center;">
-<img src="http://localhost:8000/static/loader-1.gif">
+<img src="/static/loader-1.gif">
 </div>
 
 
