--- a/static/index.html
+++ b/static/index.html
@@ -8,7 +8,7 @@
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet" type="text/css">
   <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Rubik:300,400,700,700i,300i,400i,500">
   <link href="https://fonts.googleapis.com/css?family=Share+Tech+Mono" rel="stylesheet">
-<link rel="stylesheet" href="styles.25ca580f41fbf5c10924.css"></head>
+</head>
 <body>
   <app-root>
   	<!--The content below is only a placeholder and can be replaced.-->
@@ -21,4 +21,4 @@
   </app-root>
 
 
-<script type="text/javascript" src="runtime.6afe30102d8fe7337431.js"></script><script type="text/javascript" src="polyfills.a8ec83544d583d042972.js"></script><script type="text/javascript" src="main.e3f5fa3d33e2e6019269.js"></script></body></html>
+<script type="text/javascript" src="runtime.js"></script><script type="text/javascript" src="polyfills.js"></script><script type="text/javascript" src="styles.js"></script><script type="text/javascript" src="vendor.js"></script><script type="text/javascript" src="main.js"></script></body></html>
