--- a/static/index.html
+++ b/static/index.html
@@ -8,17 +8,9 @@
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet" type="text/css">
   <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Rubik:300,400,700,700i,300i,400i,500">
   <link href="https://fonts.googleapis.com/css?family=Share+Tech+Mono" rel="stylesheet">
-</head>
+<link rel="stylesheet" href="styles.d7d432bf96bba2a1167a.css"></head>
 <body>
-  <app-root>
-  	<!--The content below is only a placeholder and can be replaced.-->
-
-<div style="text-align: center;">
-<img src="/static/loader-1.gif">
-</div>
+  <app-root></app-root>
 
 
-  </app-root>
-
-
-<script type="text/javascript" src="runtime.js"></script><script type="text/javascript" src="polyfills.js"></script><script type="text/javascript" src="styles.js"></script><script type="text/javascript" src="vendor.js"></script><script type="text/javascript" src="main.js"></script></body></html>
+<script type="text/javascript" src="runtime.6afe30102d8fe7337431.js"></script><script type="text/javascript" src="polyfills.456a59a17e203a4fac96.js"></script><script type="text/javascript" src="main.d53ca0506f427f1843f2.js"></script></body></html>
