--- a/static/index.html
+++ b/static/index.html
@@ -3,7 +3,7 @@
   <title>Isp</title>
   <base href="/">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet" type="text/css">
   <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Rubik:300,400,700,700i,300i,400i,500">
@@ -13,4 +13,4 @@
   <app-root></app-root>
 
 
-<script type="text/javascript" src="runtime.6afe30102d8fe7337431.js"></script><script type="text/javascript" src="polyfills.456a59a17e203a4fac96.js"></script><script type="text/javascript" src="main.d53ca0506f427f1843f2.js"></script></body></html>
+<script type="text/javascript" src="runtime.6afe30102d8fe7337431.js"></script><script type="text/javascript" src="polyfills.456a59a17e203a4fac96.js"></script><script type="text/javascript" src="main.fce57e409a4ac4f9bd09.js"></script></body></html>
